--- a/CodingChallenge.UI/TodoChallenge/src/App.scss
+++ b/CodingChallenge.UI/TodoChallenge/src/App.scss
@@ -7,6 +7,11 @@
     width: 400px;
   }
 
+  input[type=date] {
+    height: 38px;
+    width: 400px;
+  }
+
   input + .btn--default {
     margin-left: 10px;
   }
